mabger-meter/force-app/main/default/objects/Product2/fields/Component_Removed_From_LL_SO__c.field-meta.xml
<CustomField>
    <fullName>Component_Removed_From_LL_SO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Component Item removed from lower level shop order</description>
    <inlineHelpText>Component Item removed from lower level shop order</inlineHelpText>
    <label>Component Removed From LL SO</label>
    <type>Checkbox</type>
</CustomField>