mabger-meter/force-app/main/default/objects/Product2/fields/Direct_Buy__c.field-meta.xml
<CustomField>
    <fullName>Direct_Buy__c</fullName>
    <inlineHelpText>Only use Direct Buy for Service Parts (Alternate is Buy as Recommended Item Only)</inlineHelpText>
    <label>Direct Buy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>