mabger-meter/force-app/main/default/objects/Product2/fields/Golden_Description__c.field-meta.xml
<CustomField>
    <fullName>Golden_Description__c</fullName>
    <label>Golden Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>