mabger-meter/force-app/main/default/objects/Product2/fields/LX_Catalog_String__c.field-meta.xml
<CustomField>
    <fullName>LX_Catalog_String__c</fullName>
    <label>Catalog String</label>
    <length>75</length>
    <type>Text</type>
</CustomField>