mabger-meter/force-app/main/default/objects/Product2/fields/LX_Frozen_Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>LX_Frozen_Standard_Cost__c</fullName>
    <label>Cost</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>