mabger-meter/force-app/main/default/objects/Product2/fields/LX_Item_Class__c.field-meta.xml
<CustomField>
    <fullName>LX_Item_Class__c</fullName>
    <label>Item Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>