mabger-meter/force-app/main/default/objects/Product2/fields/LX_Item_Class_Description__c.field-meta.xml
<CustomField>
    <fullName>LX_Item_Class_Description__c</fullName>
    <label>Item Class Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>