mabger-meter/force-app/main/default/objects/Product2/fields/LX_Item_Extended_Description__c.field-meta.xml
<CustomField>
    <fullName>LX_Item_Extended_Description__c</fullName>
    <label>Extended Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>