mabger-meter/force-app/main/default/objects/Product2/fields/LX_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>LX_Item_Number__c</fullName>
    <externalId>true</externalId>
    <label>LX Item Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>