mabger-meter/force-app/main/default/objects/Product2/fields/LX_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>LX_Item_Type__c</fullName>
    <label>Item Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>