mabger-meter/force-app/main/default/objects/Product2/fields/LX_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>LX_Unit_Of_Measure__c</fullName>
    <label>UOM</label>
    <length>2</length>
    <type>Text</type>
</CustomField>