mabger-meter/force-app/main/default/objects/Product2/fields/Product_Life_Cycle_Code_PLC__c.field-meta.xml
<CustomField>
    <fullName>Product_Life_Cycle_Code_PLC__c</fullName>
    <label>Product Life-Cycle Code (PLC)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>