mabger-meter/force-app/main/default/objects/Product2/fields/Replaced_By_Part__c.field-meta.xml
<CustomField>
    <fullName>Replaced_By_Part__c</fullName>
    <inlineHelpText>Enter new part number that replaces this part number.</inlineHelpText>
    <label>Replaced By Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>