mabger-meter/force-app/main/default/objects/Product2/fields/Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Service_Price__c</fullName>
    <label>Service Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>