mabger-meter/force-app/main/default/objects/Product2/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>3</length>
    <type>Text</type>
</CustomField>