mabger-meter/force-app/main/default/objects/Product2/listViews/AllProductsTODAY.listView-meta.xml
<ListView>
    <fullName>AllProductsTODAY</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>LX_Item_Extended_Description__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Warehouse__c</columns>
    <columns>LX_Catalog_String__c</columns>
    <columns>LX_Item_Class__c</columns>
    <columns>LX_Item_Class_Description__c</columns>
    <columns>List_Price__c</columns>
    <columns>LX_Frozen_Standard_Cost__c</columns>
    <columns>LX_Unit_Of_Measure__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Products Created TODAY</label>
</ListView>